refactor: replace JFrame-based Page system with JPanel-based approach; introduce SinglePageApplication for unified frame management and transition handling. Migrate main menu and level select to content panels.